# TrainRealTimeDataSimulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Software Requirements Specification.md  Software Test Plan.md
.github/workflows/: ci.yml
config/: sample_ci_device.xml  sample_pd_only.xml  trdp-simulator.env  trdp.xml
config/systemd/: trdp-simulator.service
docs/: BACKLOG.md  CYBERSECURITY THREAT MODEL – TRDP SIMULATOR (STRIDE-BASED).md  DEPLOYMENT.md  GETTING_STARTED.md  SRS_coverage_report.md  Scripting.md  Security Regression Test Plan.md  Security Validation Test Plan.md  Software Architecture Specification.md  Software Requirements Specification.md  Software Test Plan.md  TRDP_SMOKETEST.md
include/trdp_sim/: auth_manager.hpp  backend_api.hpp  backend_engine.hpp  config_manager.hpp  data_marshalling.hpp  data_types.hpp  diagnostic_manager.hpp  engine_context.hpp  md_engine.hpp  pd_engine.hpp  performance_harness.hpp  realtime_hub.hpp  realtime_stream.hpp  trdp_adapter.hpp  trdp_stub.hpp  xml_loader.hpp
packaging/debian/: README  changelog  control  trdp-simulator.install
scripts/: run-local.sh  scripting_hooks.py  setup-trdp-simulator.sh  setup_external.sh  simulate_md_timeout.sh  simulate_pd_flow.sh
scripts/examples/: basic_lua_hook.lua  basic_python_hook.py  basic_scenario.json
src/: auth_manager.cpp  backend_api.cpp  backend_engine.cpp  config_manager.cpp  data_marshalling.cpp  data_types.cpp  diagnostic_manager.cpp  engine_context.cpp  main.cpp  md_engine.cpp  pd_engine.cpp  performance_harness.cpp  realtime_hub.cpp  realtime_stream.cpp  trdp_adapter.cpp  trdp_adapter_stub.cpp  xml_loader.cpp
tests/: config_manager_negative_test.cpp  config_manager_test.cpp  data_marshalling_test.cpp  diagnostic_export_cycle_test.cpp  diagnostic_manager_pcap_test.cpp  md_payload_test.cpp  pd_md_state_test.cpp  pd_scheduling_test.cpp  performance_harness_test.cpp  security_validation_test.cpp  trdp_adapter_test.cpp  trdp_publish_smoketest.c
web/: index.html  package.json  vite.config.js
web/src/: App.jsx  main.jsx
web/src/components/: DatasetEditor.jsx  EventBrowser.jsx  HeaderBar.jsx  InterfaceDiagnostics.jsx  LogViewer.jsx  LoginPanel.jsx  MdPanel.jsx  OverviewPanel.jsx  PdPanel.jsx  SimulationControls.jsx  TimeSyncPanel.jsx  XmlViewer.jsx
web/src/hooks/: useApi.js  useAuth.js
web/src/styles/: theme.css
